--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -31,6 +31,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Make tag
+      run: |
+        [ "${GITHUB_EVENT_NAME}" == 'pull_request' ] && echo "tag=${GITHUB_HEAD_REF##*/}" >> $GITHUB_ENV || true
+        [ "${GITHUB_EVENT_NAME}" == 'release' ] && echo "tag=${GITHUB_REF##*/}" >> $GITHUB_ENV || true
+        [ "${GITHUB_EVENT_NAME}" == 'push' ] && echo "tag=latest" >> $GITHUB_ENV || true
+
     - name: Build and push image
       uses: docker/build-push-action@v4
       with:
